<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.patrickohalloran.represent.MainViewMobileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/colorAccent"
            android:id="@+id/app_title"
            android:textSize="48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12dp"
            android:id="@+id/app_slogan" />

        <Button
            android:id="@+id/zip_code_button"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_zip_code"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorWhite"
            android:textSize="12dp"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="12dp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/current_location_button"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorWhite"
            android:textSize="12dp"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>
</RelativeLayout>
