<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/colorAccent"
        tools:context="com.patrickohalloran.represent.DetailedViewActivity">

        <TextView
            android:textAlignment="center"
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Darrell Issa"
            android:textSize="36dp"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_marginTop="6dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorWhite"></View>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo_id"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/darrell_issa"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/party"
                    android:layout_marginTop="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/democrat"
                    android:textColor="@color/colorWhite"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/dates_in_office"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="January 3, 2013 - Present"
                    android:textColor="@color/colorWhite"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:id="@+id/committee_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/committees_in"
            android:textSize="24dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_marginTop="6dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorWhite"></View>

        <TextView
            android:id="@+id/committees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/committees"
            android:textSize="12dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_marginTop="12dp"
            android:id="@+id/bill_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills_title"
            android:textSize="24dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_marginTop="6dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorWhite"></View>

        <TextView
            android:id="@+id/bills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bills"
            android:textSize="12dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</ScrollView>